manifest/swift-rest-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swif-rest-client
    version: v1
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: swif-rest-client
    app.kubernetes.io/part-of: swif-rest-client
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'https://github.com/mouachan/swift-router'
  name: swif-rest-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swif-rest-client
      version: v1
  template:
    metadata:
      labels:
        app: swif-rest-client
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: quay.io/mouachan/swif-rest-client:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: swif-rest-client
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
          readinessProbe:
            httpGet:
              path: "q/health/ready"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: "q/health/live"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: quay-secret
---
apiVersion: v1
kind: Service
metadata:
  name: swif-rest-client
  labels:
    app: swif-rest-client
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: swif-rest-client
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: swif-rest-client
  name: swif-rest-client
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: swif-rest-client
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
