manifest/swift-router-kogito-springboot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swift-router-kogito-springboot
    version: v1
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: swift-router-kogito-springboot
    app.kubernetes.io/part-of: swift-router-kogito-springboot-app
    app.openshift.io/runtime: springboot
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'https://github.com/mouachan/swift-router'
  name: swift-router-kogito-springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swift-router-kogito-springboot
      version: v1
  template:
    metadata:
      labels:
        app: swift-router-kogito-springboot
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
        sidecar.istio.io/inject: "true"
    spec:
      containers: 
        - image: quay.io/mouachan/swift-router-kogito-springboot:1.0.0-SNAPSHOT
          name: swift-router-kogito-springboot
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: "/actuator/health/readiness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: "/actuator/health/liveness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          securityContext:
            privileged: false
          resources:
            requests:
              memory: "8Gi"
              cpu: "200m"
            limits:
              memory: "8Gi"
              cpu: "400m" 
      imagePullSecrets:
        - name: quay-secret
---
apiVersion: v1
kind: Service
metadata:
  name: swift-router-kogito-springboot
  labels:
    app: swift-router-kogito-springboot
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: swift-router-kogito-springboot
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: swift-router-kogito-springboot
  name: swift-router-kogito-springboot
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: swift-router-kogito-springboot
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
